<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Constraint Based Layout Manager</string>
    <string name="action_settings">Settings</string>
    <string name="text1Caption">Dummy Text 1</string>
    <string name="text2Caption">Dummy Text 2 that is way longer than the above dummy text, but isn\'t constraint based layout great?</string>
    <string name="title_activity_dynamic">DynamicActivity</string>
    <string name="fix_width">Fix Width</string>
    <string name="fix_height">Fix Height</string>
    <string name="fix_x">Fix X</string>
    <string name="fix_y">Fix Y</string>
    <string name="constraint_label">Standard Constraints</string>
    <string name="secondary_constraint_label">Secondary Constraints</string>
    <string name="prompt_constraint_expr">Constraint Expression</string>
    <string name="static_demo">Static Constraint Demo</string>
    <string name="dynamic_demo">Dynamic Constraint Demo</string>
    <string name="dynamic_editor">Dynamic Layout Editor</string>
    <string name="padding_demo">Padding Demo</string>
    <string name="circular_demo">Circular Demo</string>
    <string name="topPadding_text">Text padded 50dp from the top</string>
    <string name="bottomPadding_text">Text padded 50dp from the bottom</string>
    <string name="leftPadding_text">Text padded 50dp from the left</string>
    <string name="rightPadding_text">Text padded 50dp from the right</string>

    <string-array name="component_type">
        <item>EditText</item>
        <item>TextView</item>
        <item>Button</item>
        <item>Select a component type</item>
    </string-array>
    <string-array name="dimension_width">
        <item>Match Parent</item>
        <item>Wrap Content</item>
        <item>Select a width dimension</item>
    </string-array>
    <string-array name="dimension_height">
        <item>Match Parent</item>
        <item>Wrap Content</item>
        <item>Select a height dimension</item>
    </string-array>
    <string-array name="constraint_strength">
        <item>Required</item>
        <item>Strong</item>
        <item>Medium</item>
        <item>Weak</item>
        <item>Select a constraint strength</item>
    </string-array>
    <string-array name="res_ids">
        <item>et1</item>
        <item>et2</item>
        <item>et3</item>
        <item>et4</item>
        <item>et5</item>
        <item>tv1</item>
        <item>tv2</item>
        <item>tv3</item>
        <item>tv4</item>
        <item>tv5</item>
        <item>btn1</item>
        <item>btn2</item>
        <item>btn3</item>
        <item>btn4</item>
        <item>btn5</item>
        <item>Select a component name</item>
    </string-array>

    <string name="image">image</string>
    <string name="title_activity_dynamic_layout_output">DynamicLayoutOutput</string>
    <string name="title_activity_app_home">Constraint Layout Manager</string>
    <string name="title_activity_circular_layout">CircularLayout</string>
    <string name="hello_world">Hello world!</string>

</resources>