<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AppHome" >

    <Button
        android:id="@+id/Btn_StaticDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="staticDemo"
        android:text="@string/static_demo" />

    <Button
        android:id="@+id/Btn_DynamicDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="dynamicDemo"
        android:text="@string/dynamic_demo" />

    <Button
        android:id="@+id/Btn_DynamicEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="dynamicLayoutEditor"
        android:text="@string/dynamic_editor" />

    <Button
        android:id="@+id/Btn_PaddingDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="paddingDemo"
        android:text="@string/padding_demo" />
    
    <Button
        android:id="@+id/Btn_CircularDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="circularDemo"
        android:text="@string/circular_demo" />
</LinearLayout>