<edu.gatech.constraints.library.LinearConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:constraint="http://schemas.android.com/apk/res/edu.gatech.constraints.demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PaddingDemo" >

    <TextView
        android:id="@+id/PV_DummyText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/topPadding_text"
        android:textColor="@android:color/black" 
        constraint:top_padding="50dp"
    	constraint:constraint_expr="self.x = ( screen.width / 2 ) - ( self.w / 2 )"/>

    <TextView
        android:id="@+id/PV_DummyText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/leftPadding_text"
        android:textColor="@android:color/black"
        constraint:constraint_expr="self.y = ( screen.height / 3 ) - ( self.h / 2 )"
        constraint:left_padding="50dp" />
        
	<TextView
        android:id="@+id/PV_DummyText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/rightPadding_text"
        android:textColor="@android:color/black"
        constraint:constraint_expr="self.y = ( screen.height / 2 ) - ( self.h / 2 )"
        constraint:right_padding="50dp" />
	
	<TextView
        android:id="@+id/PV_DummyText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/bottomPadding_text"
        android:textColor="@android:color/black"
        constraint:constraint_expr="self.x = ( screen.width / 2 ) - ( self.w / 2 )"
        constraint:bottom_padding="100dp" />

</edu.gatech.constraints.library.LinearConstraintLayout>